# jeans

./: .hlint.yaml  README.md  djinn-th.cabal  jeans.cabal  shell.nix
src/: Test.hs  Types.hs
src/Language/Haskell/: Djinn.hs
src/Language/Haskell/Djinn/: HTypes.hs  LJT.hs  LJTFormula.hs
