Name:                djinn-th
Version:             0.0.1
Synopsis:            Generate executable Haskell code from a type
Description:         Djinn uses a theorem prover for intuitionistic
                     propositional logic to generate a Haskell
                     expression when given a type.
                     .
                     Djinn-TH uses Template Haskell to turn this
                     expression into executable code.

Homepage:            http://gitorious.org/djinn-th
License:             BSD3
License-file:        LICENSE
Author:              Claude Heiland-Allen
Maintainer:          claudiusmaximus@goto10.org
Category:            Language
Build-type:          Simple

Cabal-version:       >=1.2

Library
  Hs-source-dirs:    src
  Exposed-modules:   Language.Haskell.Djinn
  Other-modules:     Language.Haskell.Djinn.LJT
                   , Language.Haskell.Djinn.LJTFormula
                   , Language.Haskell.Djinn.HTypes
                   , Test
  Build-depends:     base 
                   , template-haskell 
                   , containers
                   , logict
                   , QuickCheck
  GHC-options:       -Wall
  GHC-prof-options:  -prof -auto-all
