Name:                jeans
Version:             0.0.1
Synopsis:            Automatically create law-abiding typeclass instances
Description:         Jeans builds upon the theorem prover-based Djinn and 
                     Djinn-TH projects, together with property testing, 
                     to automatically generate law-abiding instances for 
                     typeclasses like Functor and Monad.
Homepage:            https://github.com/mrkgnao/jeans
License:             BSD3
License-file:        LICENSE
Author:              Soham Chowdhury
Category:            Language
Build-type:          Simple

Cabal-version:       >=1.2

Library
  Hs-source-dirs:    src
  Exposed-modules:   Language.Haskell.Djinn
  Other-modules:     Language.Haskell.Djinn.LJT
                   , Language.Haskell.Djinn.LJTFormula
                   , Language.Haskell.Djinn.HTypes
                   , Test
                   , Types
  Build-depends:     base 
                   , template-haskell 
                   , containers
                   , logict
                   , QuickCheck
  GHC-options:       -Wall
